<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App/activity/fragment name strings -->
    <string name="app_name">Cruise</string>
    <string name="app_name_caps">CRUISE</string>
    <string name="title_activity_after_drive">AfterDriveActivity</string>
    <string name="title_activity_after_drive_fragment2">AfterDriveFragment2</string>
    <string name="title_activity_help">HelpActivity</string>

    <!-- Menu -->
    <string name="action_reset">Reset all values</string>
    <string name="action_defaultrange">Set default range</string>
    <string name="action_defaultacc">Set average acc. mistakes</string>
    <string name="action_defaultspeed">Set average speed mistakes</string>
    <string name="action_defaultdrivecycle">Set average drive cycle distance</string>
    <string name="action_reset_db">Clear GPS database table</string>
    <string name="action_connect_bt">Connect Bluetooth</string>
    <string name="action_close_bt">Close Bluetooth</string>

    <!-- Example/placeholder -->
    <string name="example_km">120</string>
    <string name="highway_ex">80</string>
    <string name="city_ex">120</string>
    <string name="comp_score_ex">75</string>
    <string name="money_score_ex">280</string>
    <string name="eff_score_ex">16</string>

    <!-- General -->
    <string name="km">km</string>
    <string name="kr">kr</string>
    <string name="out_of_20">/ 20</string>
    <string name="out_of_20_2">/20</string>
    <string name="percent">%</string>
    <string name="est_range_remain">Estimated Range Remaining</string>

    <!-- BeforeDriveFragmentCurrentStatus -->
    <string name="highway_desc">Highway</string>
    <string name="city_desc">City driving</string>
    <string name="time_parked_ex">Time Parked: 00:02:56 hrs</string>
    <string name="charge_gained_ex">Charge Gained: 35 km</string>
    <string name="drive_distance">Distance</string>
    <string name="acc_mistakes">Acc. mistakes</string>
    <string name="brake_mistakes">Brake mistakes</string>
    <string name="speed_mistakes">Speed mistakes</string>
    <string name="drive_button">Simulate</string>
    <string name="before_drive_hint">This is the current status of your EV. Click any element on the screen for more information.</string>
    <string name="simulate_button">Take a drive!</string>

    <!-- AfterDriveFragmentCompleted -->
    <string name="drive_completed">Drive completed!</string>
    <string name="stars_ex">11/20</string>
    <string name="good_charge">Your EV still has a good amount of charge remaining.</string>
    <string name="bad_charge">Your EV might need charging before the next trip.</string>
    <string name="no_charge">Your EV might not make this trip without charging.</string>
    <string name="after_drive_hint1">Swipe left to get more information about a drive. Swipe right to see how well you\'re doing.</string>

    <!-- AfterDriveFragmentDetails -->
    <string name="speed_desc">Speed</string>
    <string name="acc_desc">Acceleration</string>
    <string name="route_desc">Route</string>
    <string name="brake_desc">Brake</string>
    <string name="start_range_desc">EV Starting Range:</string>
    <string name="range_decrease_desc">Range Decrease:</string>
    <string name="distance_traveled_desc">Distance Traveled:</string>
    <string name="start_range_ex">120 km</string>
    <string name="range_decrease_ex">48 km</string>
    <string name="distance_traveled_ex">36 km</string>
    <string name="after_drive_hint2">Here you see range estimates and driving efficiency stats. Click any element on the screen for more information.</string>

    <!-- HelpActivity -->
    <string name="speed_info">Driving faster than 100 km/h decreases your range significantly. Drive slower to preserve your range.</string>
    <string name="acc_info">Hard acceleration has a negative impact on your range. Accelerate softly to get further with your EV.</string>
    <string name="route_info">With an EV, the shortest route is not always the best route. Steep hills will drain your battery and reduce range. Consider this when you plan your drive.</string>
    <string name="brake_info">With smoother and smarter braking, you capture more regenerative energy and conserve power.</string>
    <string name="bars_desc">Range bar</string>
    <string name="bars_info">The range bar, together with the background color gradient, indicates how much range you have left. More bars means more range.</string>

    <!-- BluetoothHelper -->
    <string name="gotosettings"><u>GO TO SETTINGS</u></string>
    <string name="one_turn">1. Start your vehicle.</string>
    <string name="two_goto">2. Go to settings and enable Bluetooth.</string>
    <string name="three_scan">3. Scan for devices and select CRUISE.</string>
    <string name="four_pin">4. Enter pin 1234</string>
    <string name="senseboard">The Senseboard Bluetooth indicator will stop flashing when the device is connected.</string>
    <string name="beforewe">Before we start...</string>
    <string name="title_bluetoothhelper">Bluetooth Helper</string>

    <!-- SummaryFragment -->
    <string name="eval_strong">Based on your current driving habits, you are a strong candidate for an electric vehicle. Driving an EV fits well with your lifestyle.</string>
    <string name="eval_good">Based on your current driving habits, you are a good candidate for an electric vehicle. An EV will satisfy the majority of your needs.</string>
    <string name="eval_weak">Based on your current driving habits, you are a weak candidate for an electric vehicle. Maybe an EV as a second car would be right for you?</string>
    <string name="eval_none">Cruise has not yet collected enough data to provide you with an evaluation. Continue using Cruise to determine if an EV is right for you.</string>
    <string name="rating_ex">20/20</string>
    <string name="comp_score_desc">Compatible drives</string>
    <string name="money_score_desc">Money saved</string>
    <string name="eff_score_desc">Efficiency score</string>
    <string name="continue_desc">Continue using Cruise to collect more data and improve your driving performance.</string>

    <!-- SplashActivity -->
    <string name="cruise_starting">Cruise is starting...</string>

</resources>