<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_defaultrange"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_defaultrange"/>
    
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_reset"/>

    <item
        android:id="@+id/action_connect_bt"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_connect_bt"/>
    
    <item
        android:id="@+id/action_close_bt"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_close_bt"/>

</menu>