<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green1"
    android:gravity="center"
    android:orientation="vertical"
    android:tag="current_status"
    android:weightSum="1"
    tools:context=".BluetoothHelper" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:scaleType="fitCenter"
            android:src="@drawable/cruise_logo" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps"
            android:textColor="@color/white"
            android:textSize="@dimen/font_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv_before_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/beforewe"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_large" />

        <TextView
            android:id="@+id/tv_1_start_engine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/one_turn"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_medium_small" />

        <TextView
            android:id="@+id/tv_2_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/two_goto"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_medium_small" />

        <TextView
            android:id="@+id/tv_3_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/three_scan"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_medium_small" />

        <TextView
            android:id="@+id/tv_4_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/four_pin"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_medium_small" />

        <TextView
            android:id="@+id/tv_senseboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/senseboard"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_medium_small" />

        <TextView
            android:id="@+id/tv_goto_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:clickable="true"
            android:textColor="#FFFFFF"
            android:text="@string/gotosettings"
            android:textSize="@dimen/font_medium" 
            android:onClick="openBluetoothSettings"
            />
    </LinearLayout>

</LinearLayout>