<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".DriveActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center" >

        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:scaleType="fitCenter"
            android:src="@drawable/cruise_logo" />
        
        <TextView 
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps"
            android:textSize="30sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@color/black"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/battery_range"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_starting_range"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_double_vertical_margin"
            android:background="@color/light_green"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/example_km"
            android:textSize="30sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_weight="0.2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/et_distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drive_distance"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_acc_mistakes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acc_mistakes"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_speed_mistakes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speed_mistakes"
            android:inputType="phone" />

        <Button
            android:id="@+id/b_drive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/drive_button" />
    </LinearLayout>

</LinearLayout>