<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green1"
    android:gravity="center"
    android:orientation="vertical"
    android:tag="current_status"
    android:weightSum="1"
    tools:context=".BeforeDriveFragmentCurrentStatus" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:scaleType="fitCenter"
            android:src="@drawable/cruise_logo" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="@string/app_name_caps"
            android:textColor="@color/white"
            android:textSize="@dimen/font_logo" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp" >

                <TextView
                    android:id="@+id/tv_starting_range"
                    android:layout_width="130sp"
                    android:layout_height="90sp"
                    android:text="@string/example_km"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_larger" />

                <TextView
                    android:id="@+id/tv_km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tv_starting_range"
                    android:layout_marginBottom="-16sp"
                    android:layout_toRightOf="@id/tv_starting_range"
                    android:text="@string/km"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

                <TextView
                    android:id="@+id/tv_est_range_remain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_starting_range"
                    android:text="@string/est_range_remain"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="80dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_highway"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_marginRight="8sp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/highway_icon" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60sp" >

                    <TextView
                        android:id="@+id/tv_highway_range"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/iv_highway"
                        android:text="@string/highway_ex"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_large" />

                    <TextView
                        android:id="@+id/tv_highway_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tv_highway_range"
                        android:layout_marginBottom="5sp"
                        android:layout_marginLeft="3sp"
                        android:layout_toRightOf="@id/tv_highway_range"
                        android:text="@string/km"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_medium" />

                    <TextView
                        android:id="@+id/tv_highway_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_highway_range"
                        android:layout_marginTop="-16sp"
                        android:text="@string/highway_desc"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_small" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_city"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_marginRight="8sp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/city_icon" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60sp" >

                    <TextView
                        android:id="@+id/tv_city_range"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/iv_city"
                        android:text="@string/city_ex"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_large" />

                    <TextView
                        android:id="@+id/tv_city_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tv_city_range"
                        android:layout_marginBottom="5sp"
                        android:layout_marginLeft="3sp"
                        android:layout_toRightOf="@id/tv_city_range"
                        android:text="@string/km"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_medium" />

                    <TextView
                        android:id="@+id/tv_city_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_city_range"
                        android:layout_marginTop="-16sp"
                        android:text="@string/city_desc"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_small" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bars_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:gravity="center|right"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/bar1"
                android:layout_width="140dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar2"
                android:layout_width="120dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar3"
                android:layout_width="100dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar4"
                android:layout_width="80dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar5"
                android:layout_width="60dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar6"
                android:layout_width="80dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar7"
                android:layout_width="100dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar8"
                android:layout_width="120dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginBottom="@dimen/bar_spacing"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar9"
                android:layout_width="140dp"
                android:layout_height="@dimen/bar_height"
                android:layout_marginRight="-4dp"
                android:background="@drawable/whitebar" >
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_before_drive_hint"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_gravity="center"
            android:background="@drawable/hintcircle"
            android:gravity="center"
            android:padding="30sp"
            android:text="@string/before_drive_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium_small" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv_time_parked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_parked_ex"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_charge_gained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_gained_ex"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/light_grey"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <EditText
            android:id="@+id/et_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/drive_distance"
            android:inputType="phone"
            android:textSize="8sp" />

        <EditText
            android:id="@+id/et_acc_mistakes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/acc_mistakes"
            android:inputType="phone"
            android:textSize="8sp" />

        <EditText
            android:id="@+id/et_brake_mistakes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/brake_mistakes"
            android:inputType="phone"
            android:textSize="8sp" />

        <EditText
            android:id="@+id/et_speed_mistakes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/speed_mistakes"
            android:inputType="phone"
            android:textSize="8sp" />

        <Button
            android:id="@+id/b_drive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/drive_button"
            android:textSize="8sp" />
    </LinearLayout>

</LinearLayout>